--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "backend": "file:..",
     "daisyui": "^5.0.6",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
