--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "gh-pages": "^6.3.0"
+    "cross-env": "^7.0.3"
   }
 }
